created the tonic identifier package

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -12,7 +12,7 @@
      "collapsed": false,
      "input": [
       "import json\n",
-      "from tonic import TonicLastNote"
+      "from tonic_identifier.tonic_identifier import TonicLastNote"
      ],
      "language": "python",
      "metadata": {},
@@ -35,8 +35,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "tonic_identier = TonicLastNote(pitch)\n",
-      "tonic = tonic_identier.compute_tonic()"
+      "tonic_identifier = TonicLastNote(pitch)\n",
+      "tonic = tonic_identifier.compute_tonic()"
      ],
      "language": "python",
      "metadata": {},
@@ -55,7 +55,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "tonic_identier.plot_tonic()"
+      "tonic_identifier.plot_tonic()"
      ],
      "language": "python",
      "metadata": {},
