Updated the demo

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -50,7 +50,7 @@
    ],
    "source": [
     "tonic_identifier = TonicLastNote()\n",
-    "tonic, pitch, pitch_chunks, distribution, stable_pitches = tonic_identifier.identify(pitch)\n",
+    "tonic, pitch, pitch_chunks, pitch_distribution, stable_pitches = tonic_identifier.identify(pitch)\n",
     "tonic_identifier.plot(pitch, tonic, pitch_chunks, distribution)\n"
    ]
   },
@@ -58,25 +58,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": []
